--- a/app/views/users/registrations/confirmation_instructions.html.erb
+++ b/app/views/users/registrations/confirmation_instructions.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="notification is-info has-text-centered">
-    <h2 class="title"><i class="fas fa-envelope"></i> Cek Email Anda</h2>
-    <p>Silakan periksa email Anda untuk mengonfirmasi akun.</p>
-    <p>Belum menerima email? <%= link_to "Kirim ulang", new_user_confirmation_path %></p>
+    <h2 class="title"><i class="fas fa-envelope"></i> Check Your Email</h2>
+    <p>Please check your email to confirm your account.</p>
+    <p>Haven't received the email? <%= link_to "Resend", new_user_confirmation_path %></p>
   </div>
 </div>
+
