--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -16,7 +16,11 @@
       <p class="manga-info"><strong>Author:</strong> <%= @manga.author %></p>
       <p class="manga-info"><strong>Rating:</strong> ⭐ <%= @manga.rating %>/10</p>
       <p class="manga-info"><strong>Created Date:</strong> <%= @manga.created_at.strftime("%d %B %Y") %></p>
-      <p class="manga-info"><strong>Genre:</strong> <%= @manga.genre %></p>
+      <p class="manga-info"><strong>Genre:</strong> 
+          <% @manga.genre.split(',').map(&:strip).each_with_index do |genre, index| %>
+          <%= link_to genre, "/manga/genre/#{ERB::Util.url_encode(genre)}" %><%= ", " unless index == @manga.genre.split(',').size - 1 %>
+          <% end %>
+      </p>
       <div class="manga-actions">
         <% if user_signed_in? %>
           <% if current_user.bookmarked_mangas.include?(@manga) %>
@@ -199,9 +203,6 @@
       margin-top: 10px;
     }
 
-    .manga-actions {
-      justify-content: center;
-    }
   }
 
   @media screen and (max-width: 480px) {
